# simple_membership_proof

./: CITATION.cff  Cargo.toml  README.md  ci  privacy.txt
client/: Cargo.toml
client/src/: main.rs
client/src/payment/: ledger.rs
client/src/payment/signature/: mod.rs
client/src/payment/signature/schnorr/: mod.rs
client/src/rpc_request/: mod.rs
client/src/rpc_request/get_hash_params/: mod.rs
client/src/rpc_request/get_path/: mod.rs
client/src/rpc_request/get_root/: mod.rs
client/src/rpc_request/get_tree/: mod.rs
client/src/rpc_request/send_proof/: mod.rs
client/src/ui/: mod.rs
client/src/utils/: circuit.rs  mod.rs  proof.rs
data/: db.json
server/: Cargo.toml
server/src/: circuit.rs  handler.rs  main.rs  router.rs
server/src/handler/: add_balance.rs  get_balance.rs  get_hash_params.rs  get_path.rs  get_root.rs  get_tree.rs  mod.rs  put_message.rs  register_user.rs  send_proof.rs
server/src/payment/: account.rs  ledger.rs
server/src/payment/signature/: mod.rs
tests/: Cargo.toml
tests/src/: lib.rs  merkle.rs  merkle_tree.rs
