[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", features = ["std"] }
tui = { version = "0.19", features = ['crossterm', 'serde'] }
thiserror = "1.0"

tui-logger = "0.8.1"
log = "0.4.17"

hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1"

ark-ff = { version = "^0.3.0" }
# ark-ff = "0.4.1"
ark-ec = { version = "^0.3.0" }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0" }
ark-std = { version = "^0.3.0" }
ark-relations = { version = "^0.3.0" }
ark-r1cs-std = { version = "^0.3.0" }
ark-snark = { version = "^0.3.0" }
ark-serialize = { version = "^0.3.0" }
ark-crypto-primitives = { version = "^0.3.0", default-features = true }
derivative = { version = "2.0", features = ["use_core"] }
blake2 = { version = "0.9" }
digest = "0.9"

ark-groth16 = { version = "^0.3.0" }
tracing = { version = "0.1", features = [ "attributes" ], optional = true }
