[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.6", features = ["async-await"] }
hyper = "0.13"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2"
bytes = "0.5"
async-trait = "0.1"

ark-ff = { version = "^0.3.0" }
ark-ec = { version = "^0.3.0" }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0" }
ark-std = { version = "^0.3.0" }
ark-relations = { version = "^0.3.0", optional = true }

ark-r1cs-std = { version = "^0.3.0", optional = true }
ark-snark = { version = "^0.3.0" }

ark-serialize = { version = "^0.3.0" }

ark-crypto-primitives = { version = "^0.3.0", default-features = true }
blake2 = { version = "0.9" }
digest = "0.9"
derivative = { version = "2.0", features = ["use_core"] }
tracing = { version = "0.1", features = [ "attributes" ], optional = true }

elliptic-curve = "0.12.3"
