[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false  }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-std = { version = "^0.3.0", default-features = false }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }

ark-bls12-381 = { version = "^0.3.0" }
ark-snark = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0" }

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8.5"